rename: 변수 및 클래스 이름 변경