@@ -2,6 +2,7 @@ package com.woozuda.backend.question.service.dto.request;
 
 import lombok.Getter;
 
+import java.util.Collections;
 import java.util.List;
 
 @Getter
@@ -12,7 +13,7 @@ public class AiQuestionRequestDto {
     private final Integer topK = 0;
     private final Float topP = 0.80f;
     private final Float repeatPenalty = 6.0f;
-    private final List<String> stopBefore = List.of();
+    private final List<String> stopBefore = Collections.emptyList();
     private final String restart = "";
     private final String start = "";
     private final Integer maxTokens = 128;
